# generalized-kuramoto-criticality

./: .gitignore  00_README.md  LICENSE  README.md
01_simulation/1d_lr3/: Cargo.toml
01_simulation/1d_lr3/src/: main.rs
01_simulation/2d_lrdg/: Cargo.toml  PARAMS.md  README.md
01_simulation/2d_lrdg/src/: main.rs
02_data/1d_lr3/statistics/sigma_0.200/N_1024/: binder_cumulants.npy  binder_cumulants_stds.npy  magnetic_susceptibilities.npy  magnetic_susceptibilities_stds.npy  order_parameter_means.npy  order_parameter_stds.npy
02_data/1d_lr3/statistics/sigma_0.200/N_128/: K_values.npy  binder_cumulants.npy  binder_cumulants_stds.npy  magnetic_susceptibilities.npy  magnetic_susceptibilities_stds.npy  order_parameter_means.npy  order_parameter_stds.npy
02_data/1d_lr3/statistics/sigma_0.200/N_2048/: binder_cumulants.npy  binder_cumulants_stds.npy  magnetic_susceptibilities.npy  magnetic_susceptibilities_stds.npy  order_parameter_means.npy  order_parameter_stds.npy
02_data/1d_lr3/statistics/sigma_0.200/N_256/: binder_cumulants.npy  binder_cumulants_stds.npy  magnetic_susceptibilities.npy  magnetic_susceptibilities_stds.npy  order_parameter_means.npy  order_parameter_stds.npy
02_data/1d_lr3/statistics/sigma_0.200/N_4096/: binder_cumulants.npy  binder_cumulants_stds.npy  magnetic_susceptibilities.npy  magnetic_susceptibilities_stds.npy  (+2 more)
03_scripts/: config.py  plot_figure_A.py  plot_figure_B.py  plot_figure_C.py  plot_figure_D.py  plot_figure_E.py
04_figures/1d_lr3/figure_D/: critical_exponents_vs_ds.csv
04_figures/2d_lrdg/figure_D/: critical_exponents_vs_ds.csv
(+993 files in other folders)
