[package]
name = "lrdg1d_sparse_batch"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
ndarray = "0.15"
ndarray-npy = "0.8"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
